fix searchbar on mobile

--- a/djangocms_admin_style/sass/components/_mobile.scss
+++ b/djangocms_admin_style/sass/components/_mobile.scss
@@ -65,6 +65,9 @@ body.login {
     float: none !important;
     width: 100% !important;
 }
+.filebrowser #content-top-bar .object-tools {
+    float: right !important;
+}
 .filebrowser #changelist {
     margin-bottom: 20px;
     #changelist-wrapper {
@@ -147,7 +150,7 @@ body.login {
         position: static;
         .actions {
             select {
-                width: 285px !important;
+                max-width: 230px !important;
             }
             .action-counter {
                 display: block !important;
@@ -156,11 +159,12 @@ body.login {
         #toolbar {
             float: none !important;
             padding-left: 0 !important;
+            margin-right: 0 !important;
             label {
                 display: inline-block;
             }
             form #searchbar {
-                max-width: 285px !important;
+                max-width: 230px !important;
             }
             .small {
                 display: block;
@@ -185,6 +189,9 @@ body.login {
     }
     #changelist-search {
         max-width: none;
+        input[type="submit"] {
+            margin-right: 10px;
+        }
     }
     .filtered {
         .actions,
